<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="@drawable/backgroundimg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_marginTop="90dp"
            android:src="@drawable/oyster" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Oyster Recovery Partnership"
            android:textColor="#000"
            android:textSize="15sp"
            android:layout_marginTop="11dp"/>

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_marginTop="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">
        </EditText>

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:inputType="textPassword">
        </EditText>

        <EditText
            android:id="@+id/register_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:inputType="textPassword">
        </EditText>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/choice1"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <RadioButton
                android:id="@+id/choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <RadioButton
                android:id="@+id/choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/truck_driver"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp">

            <Button
                android:id="@+id/back_to_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Back to Login"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/black"/>

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_toLeftOf="@id/back_to_login_button"
                android:backgroundTint="@color/black"
                android:text="Register" />


        </RelativeLayout>
    </LinearLayout>
</ScrollView>